Wrong folder location on standard js assets.

--- a/wolf3d.html
+++ b/wolf3d.html
@@ -11,9 +11,9 @@
 	<title>Wolfenstein 3D</title>
     <link rel="stylesheet" href="styles.css">
 
-    <script src="modernizr.custom.js"></script>
-    <script src="jquery-1.7.1.min.js"></script>
-    <script src="load.js"></script>
+    <script src="js/modernizr.custom.js"></script>
+    <script src="js/jquery-1.7.1.min.js"></script>
+    <script src="js/load.js"></script>
 
 </head>
 <body>
